--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,3 +1,9 @@
+/* Elementor SPECIFIC Styles */
+body.elementor-page #main #content-wrap { 
+	padding-bottom: 0; 
+	padding-top: 0; 
+}
+
 .container {
 	width: 1200px;
 	max-width: 90%;
