Removed Top Bar CSS
Element's gone, so is the CSS now.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -88,10 +88,12 @@
 /*------------------------------------*
 	$TOP BAR
 *------------------------------------*/
-@import "components/topbar/topbar";
-@import "components/topbar/topbar-content";
-@import "components/topbar/topbar-menu";
-@import "components/topbar/topbar-social";
+/*
+	@import "components/topbar/topbar";
+	@import "components/topbar/topbar-content";
+	@import "components/topbar/topbar-menu";
+	@import "components/topbar/topbar-social";
+*/
 
 /*------------------------------------*
 	$HEADER
