Center Menu Logo Fix
It's now centered.

--- a/sass/components/_responsive.scss
+++ b/sass/components/_responsive.scss
@@ -195,7 +195,7 @@ only screen and (                min-resolution: 2dppx) {
 	}
 
 	#site-header.center-header #site-logo {
-		display: table;
+		display: block;
 	}
 
 	.has-left-menu #site-logo {
