--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -36,9 +36,7 @@
 		img {
 			width: auto;
 			vertical-align: middle;
-		    -webkit-transition: opacity .3s ease-out;
-		    -moz-transition: opacity .3s ease-out;
-		    -o-transition: opacity .3s ease-out;
+			-webkit-backface-visibility: hidden;
 		    transition: opacity .3s ease-out;
 		}
 
