--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -37,6 +37,7 @@
 			width: auto;
 			vertical-align: middle;
 			-webkit-backface-visibility: hidden;
+			transform: translate3d(0,0,0);
 		    transition: opacity .3s ease-out;
 		}
 
