--- a/rtl.css
+++ b/rtl.css
@@ -10,11 +10,7 @@ body { direction: rtl; unicode-bidi: embed; }
 
 /* Float right */
 .col,
-.kindling-row .col,
-.top-bar-left { float: right }
-
-/* Float left */
-.top-bar-right { float: left }
+.kindling-row .col { float: right }
 
 /* List */
 ul, ol { margin: 15px 20px 15px 0; }
@@ -28,17 +24,11 @@ table th, table td, caption, th, td { text-align: right; }
 
 /* Change right position to Left position*/
 .site-breadcrumbs,
-#top-bar-social.top-bar-right,
 #searchform-dropdown,
 #current-shop-items-dropdown { right: auto; left: 0; }
 
-/* Change left position to right position*/
-#top-bar-social.top-bar-left { left: auto; right: 0; }
-
 /* Boxed layout */
-.boxed-main-layout .site-breadcrumbs,
-.boxed-main-layout #top-bar-social.top-bar-right { right: auto; left: 30px; }
-.boxed-main-layout #top-bar-social.top-bar-left { left: auto; right: 30px; }
+.boxed-main-layout .site-breadcrumbs { right: auto; left: 30px; }
 
 /* Blockquote */
 blockquote { padding-right: 20px; padding-left: 0; border-right-width: 3px; border-left-width: 0; }
