--- a/sass/components/header/_navigation.scss
+++ b/sass/components/header/_navigation.scss
@@ -71,8 +71,7 @@
 	}
 }
 
-.minimal-header.left-menu #site-logo,
-.transparent-header.left-menu #site-logo {
+.minimal-header.left-menu #site-logo {
 	padding-right: 20px;
 }
 
